// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownRadioItem > Snapshots > should match its default snapshot 1`] = `
<li
  aria-checked="false"
  class="group px-2 py-1.5 rounded-lg hover:bg-gray-25 dark:hover:bg-gray-750"
  data-id="sds-dropdown-radio-item"
  role="menuitemradio"
>
  <label
    class="flex flex-row gap-2 items-center cursor-pointer"
    for="v-0"
  >
    <input
      class="cursor-pointer relative top-px"
      id="v-0"
      type="radio"
      value="option1"
    />
    <span
      class="flex items-center gap-1.5 text-sm text-black dark:text-gray-300 group-hover:text-gray-900 group-hover:dark:text-white w-full"
    >
      <!-- @slot Optional icon slot. -->
      
      
      <!-- @slot Label content for the radio. -->
      
      Test Option
      
    </span>
  </label>
</li>
`;

exports[`DropdownRadioItem > Snapshots > should match snapshot when checked 1`] = `
<li
  aria-checked="true"
  class="group px-2 py-1.5 rounded-lg hover:bg-gray-25 dark:hover:bg-gray-750"
  data-id="sds-dropdown-radio-item"
  role="menuitemradio"
>
  <label
    class="flex flex-row gap-2 items-center cursor-pointer"
    for="v-0"
  >
    <input
      checked=""
      class="cursor-pointer relative top-px"
      id="v-0"
      type="radio"
      value="option1"
    />
    <span
      class="flex items-center gap-1.5 text-sm text-black dark:text-gray-300 group-hover:text-gray-900 group-hover:dark:text-white w-full"
    >
      <!-- @slot Optional icon slot. -->
      
      
      <!-- @slot Label content for the radio. -->
      
      Test Option
      
    </span>
  </label>
</li>
`;

exports[`DropdownRadioItem > Snapshots > should match snapshot when disabled 1`] = `
<li
  aria-checked="false"
  class="group px-2 py-1.5 rounded-lg hover:bg-gray-25 dark:hover:bg-gray-750 opacity-50 cursor-not-allowed"
  data-id="sds-dropdown-radio-item"
  role="menuitemradio"
>
  <label
    class="flex flex-row gap-2 items-center cursor-pointer cursor-not-allowed"
    for="v-0"
  >
    <input
      class="cursor-pointer relative top-px"
      disabled=""
      id="v-0"
      type="radio"
      value="option1"
    />
    <span
      class="flex items-center gap-1.5 text-sm text-black dark:text-gray-300 group-hover:text-gray-900 group-hover:dark:text-white w-full"
    >
      <!-- @slot Optional icon slot. -->
      
      
      <!-- @slot Label content for the radio. -->
      
      Test Option
      
    </span>
  </label>
</li>
`;
